# Bigbucks

./: 512 Spring 2023 Project Grading Template.xlsx  README.md  philosophy.md  product_backlog.csv
Bigbucks/bigbucks/: auth.py  transactions.py
C4_Model/: C4_Model_Structurizr_DSL_code .md  code_UML.md
Plan/Pre_Plan/: schedule.md
Pre_Plan/: requirements.md  usecase-diagram-code
Sprint1_3.20/instance/: bigbucks.sqlite
Sprint2_3.25/: retrospective.md  usecase_diagram.md
Sprint2_3.25/bigbucks/: trade.py
Sprint3_4.2/: Sprint3_issues.md
Sprint4_4.10/: Sprint4_plan.md  Sprint4_retrospective.md
Sprint5_4.17/: Sprint5_retrospective.md
Sprint6_4.24/: Sprint6_usecase_code.txt
WeeklySprint/: reg&login_feedback.docx
WeeklySprint/Sprint2_3.25/: sprint2_plan.md  sprint2_review.md
WeeklySprint/Sprint3_4.2/: Sprint3_Plan.md  Sprint3_Review.md  sprint3_retrospective.md  usecase_diagram.md
WeeklySprint/Sprint4_4.10/: Sprint4_issues.md  Sprint4_review.md  sprint4_usecase_code.txt
WeeklySprint/Sprint5_4.17/: Sprint5_issues.md  Sprint5_plan.md  Sprint5_review.md
WeeklySprint/Sprint6_4.24/: Sprint6_issues.md  Sprint6_plan.md  Sprint6_retrospective.md  Sprint6_review.md
bigbucks-package/: README.md  pyproject.toml
bigbucks-package/src/: MANIFEST.in  setup.py
bigbucks-package/src/bigbucks/: auth.py  trade.py  transactions.py
bigbucks-package/src/bigbucks.egg-info/: SOURCES.txt
bigbucks-package/src/bigbucks/templates/: trade.html
bigbucks-package/src/instance/: bigbucks.sqlite
tests/: Bigbucks-Buy-and-Sell-Test-Case.docx
(+18 files in other folders)
